[package]
name = "dhcp_server"
version = "0.1.0"
authors = ["makutak <takkouno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27.2"
byteorder = "1.3.4"
log = "0.4.11"
env_logger = "0.8.2"
failure = "0.1.8"
rusqlite = "0.24.2"
ipnetwork = "0.17.0"
