[package]
name = "packet-capture"
version = "0.1.0"
authors = ["makutak <takkouno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27.2"
log = "0.4.11"
env_logger = "0.8.2"
clap = "3.0.0-beta.2"
