[package]
name = "webserver"
version = "0.1.0"
authors = ["makutak <takkouno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6"
regex = "1.4.2"
log = "0.4.11"
env_logger = "0.8.2"
failure = "0.1.8"
clap = "3.0.0-beta.2"