[package]
name = "todo"
version = "0.1.0"
authors = ["makutak <takkouno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-rt = "1.1.1"
thiserror = "1.0.22"
askama = "0.10.3"
rusqlite = { version = "0.24.1", features=["bundled"]}
serde = { version = "1.0.117", features=["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
libsqlite3-sys = "0.20.1"
